unpackaged/main/default/objects/Case/fields/Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status__c</fullName>
    <label>Adoption Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Recommend</fullName>
            </value>
            <value>
                <fullName>Not using</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>