unpackaged/main/default/objects/Case/fields/Case_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Reason__c</fullName>
    <label>Case Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Cannot Resolve</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>