unpackaged/main/default/objects/Case/fields/Case_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Case_Duration_Minutes__c</fullName>
    <formula>IF( TEXT(Status) = "New", (NOW() -  CreatedDate)*1440 ,
IF(  OR( TEXT (Status) = "Re-Opened", TEXT (Status) = "On Hold", TEXT (Status) = "Escalated"), (NOW() -  Reopen_Date__c)*1440, null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>