unpackaged/main/default/objects/Case/fields/ChatTranscript__c.field-meta.xml
<CustomField>
    <fullName>ChatTranscript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>