unpackaged/main/default/objects/Case/fields/Contest__c.field-meta.xml
<CustomField>
    <fullName>Contest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pops from flow</description>
    <label>Contest</label>
    <type>Checkbox</type>
</CustomField>