unpackaged/main/default/objects/Case/fields/Critsit__c.field-meta.xml
<CustomField>
    <fullName>Critsit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critsit</label>
    <type>Checkbox</type>
</CustomField>