unpackaged/main/default/objects/Case/fields/Customer_emoticon_value__c.field-meta.xml
<CustomField>
    <fullName>Customer_emoticon_value__c</fullName>
    <description>Store the emoticon as a text value.</description>
    <label>Customer emoticon value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>happy</fullName>
            </value>
            <value>
                <fullName>confused</fullName>
            </value>
            <value>
                <fullName>annoyed</fullName>
            </value>
            <value>
                <fullName>frustrated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>