unpackaged/main/default/objects/Case/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>RIGHT(SuppliedEmail ,LEN(SuppliedEmail ) - FIND("@", SuppliedEmail ,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>