unpackaged/main/default/objects/Case/fields/Escalated2__c.field-meta.xml
<CustomField>
    <fullName>Escalated2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated2</label>
    <type>Checkbox</type>
</CustomField>