unpackaged/main/default/objects/Case/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Account Profile</fullName>
            </value>
            <value>
                <fullName>Account Profile Widget</fullName>
            </value>
            <value>
                <fullName>Add/Edit</fullName>
            </value>
            <value>
                <fullName>Adoptions</fullName>
            </value>
            <value>
                <fullName>Assignment Links</fullName>
            </value>
            <value>
                <fullName>Assignment Questions</fullName>
            </value>
            <value>
                <fullName>Assignment Setup</fullName>
            </value>
            <value>
                <fullName>Automated Emails</fullName>
            </value>
            <value>
                <fullName>Automated Error</fullName>
            </value>
            <value>
                <fullName>Bye bye</fullName>
            </value>
            <value>
                <fullName>Calendar</fullName>
                <isActive>false</isActive>
                <label>Calendar</label>
            </value>
            <value>
                <fullName>Can't Find Info</fullName>
            </value>
            <value>
                <fullName>Canvas Resource Suite</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>Comp</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
                <isActive>false</isActive>
                <label>Conference</label>
            </value>
            <value>
                <fullName>Contact Information</fullName>
            </value>
            <value>
                <fullName>Reuse Request</fullName>
                <label>Content Use Request</label>
            </value>
            <value>
                <fullName>Contribution</fullName>
            </value>
            <value>
                <fullName>Course Controls</fullName>
                <isActive>false</isActive>
                <label>Course Controls</label>
            </value>
            <value>
                <fullName>Course Picker</fullName>
            </value>
            <value>
                <fullName>Course Settings</fullName>
            </value>
            <value>
                <fullName>Creator Fest</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Dash</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Data Privacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>