unpackaged/main/default/objects/Case/fields/Fields_Requested__c.field-meta.xml
<CustomField>
    <fullName>Fields_Requested__c</fullName>
    <label>Fields Requested</label>
    <type>TextArea</type>
</CustomField>