unpackaged/main/default/objects/Case/fields/Filters_Requested__c.field-meta.xml
<CustomField>
    <fullName>Filters_Requested__c</fullName>
    <inlineHelpText>Adoptions, Adopters, Number of students, Specific school, specific book(s), etc.</inlineHelpText>
    <label>Filters Requested</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>