unpackaged/main/default/objects/Case/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Webview</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
            <value>
                <fullName>Google Doc</fullName>
            </value>
            <value>
                <fullName>iBook</fullName>
            </value>
            <value>
                <fullName>ePub</fullName>
            </value>
            <value>
                <fullName>Kindle</fullName>
            </value>
            <value>
                <fullName>Study Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>