unpackaged/main/default/objects/Case/fields/Former_K_I_P__c.field-meta.xml
<CustomField>
    <fullName>Former_K_I_P__c</fullName>
    <formula>Account.Former_K_I_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Former K.I.P</label>
    <type>Checkbox</type>
</CustomField>