unpackaged/main/default/objects/Case/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Feature__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>6 Digit Pin</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Accessibility Standards</fullName>
            </value>
            <value>
                <fullName>Access Pending</fullName>
            </value>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Actions</fullName>
            </value>
            <value>
                <fullName>Add/delete email</fullName>
            </value>
            <value>
                <fullName>Add Co-Teacher</fullName>
            </value>
            <value>
                <fullName>Add New Course</fullName>
            </value>
            <value>
                <fullName>Adopter</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Already has access</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Amazon Associates</fullName>
            </value>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Ancillary Wishlist</fullName>
            </value>
            <value>
                <fullName>Answer Keys</fullName>
            </value>
            <value>
                <fullName>Answer Selection</fullName>
            </value>
            <value>
                <fullName>Answer Submission</fullName>
            </value>
            <value>
                <fullName>AP Alignment</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Archive Contact</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Assignment Details</fullName>
            </value>
            <value>
                <fullName>Assignments</fullName>
            </value>
            <value>
                <fullName>Attribution</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Averages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>