unpackaged/main/default/objects/Case/fields/Marcom_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marcom_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marcom Campaign</label>
    <type>Checkbox</type>
</CustomField>