unpackaged/main/default/objects/Case/fields/Needs_Followup__c.field-meta.xml
<CustomField>
    <fullName>Needs_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Followup</label>
    <type>Checkbox</type>
</CustomField>