unpackaged/main/default/objects/Case/fields/Nicole_Emailed__c.field-meta.xml
<CustomField>
    <fullName>Nicole_Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nicole Emailed</label>
    <type>Checkbox</type>
</CustomField>