unpackaged/main/default/objects/Case/fields/Online__c.field-meta.xml
<CustomField>
    <fullName>Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online</label>
    <type>Checkbox</type>
</CustomField>