unpackaged/main/default/objects/Case/fields/OS_Team__c.field-meta.xml
<CustomField>
    <fullName>OS_Team__c</fullName>
    <description>OS Team most closely related to the related case issue</description>
    <label>OS Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>BIT</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
                <isActive>false</isActive>
                <label>Books</label>
            </value>
            <value>
                <fullName>CNX</fullName>
                <isActive>false</isActive>
                <label>CNX</label>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Content Engineering</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>Editorial</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Marcom</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>REX</fullName>
            </value>
            <value>
                <fullName>Rover</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Tutor</fullName>
            </value>
            <value>
                <fullName>Unified</fullName>
                <isActive>false</isActive>
                <label>Unified</label>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>