unpackaged/main/default/objects/Case/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Online homework providers</fullName>
            </value>
            <value>
                <fullName>Courseware providers</fullName>
            </value>
            <value>
                <fullName>Print custom editions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>