unpackaged/main/default/objects/Case/fields/Partners__c.field-meta.xml
<CustomField>
    <fullName>Partners__c</fullName>
    <label>Partners</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Cerego</fullName>
            </value>
            <value>
                <fullName>Courseweaver</fullName>
            </value>
            <value>
                <fullName>ExpertTA</fullName>
            </value>
            <value>
                <fullName>Sapling</fullName>
            </value>
            <value>
                <fullName>SimBio</fullName>
            </value>
            <value>
                <fullName>WebAssign</fullName>
            </value>
            <value>
                <fullName>WileyPlus</fullName>
            </value>
            <value>
                <fullName>XYZ Homework</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>