unpackaged/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>CNX Editor</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Kinetic</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
                <label>OS Web</label>
            </value>
            <value>
                <fullName>REX</fullName>
            </value>
            <value>
                <fullName>Rover</fullName>
            </value>
            <value>
                <fullName>Study Edge</fullName>
            </value>
            <value>
                <fullName>Textbook</fullName>
            </value>
            <value>
                <fullName>Tutor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>