unpackaged/main/default/objects/Case/fields/Project_Equip__c.field-meta.xml
<CustomField>
    <fullName>Project_Equip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Equip</label>
    <type>Checkbox</type>
</CustomField>