unpackaged/main/default/objects/Case/fields/Run_flow__c.field-meta.xml
<CustomField>
    <fullName>Run_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run flow</label>
    <type>Checkbox</type>
</CustomField>