unpackaged/main/default/objects/Case/fields/School_Organization__c.field-meta.xml
<CustomField>
    <fullName>School_Organization__c</fullName>
    <label>School/Organization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>