unpackaged/main/default/objects/Case/fields/Send_NPS_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_NPS_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send NPS Email</label>
    <type>Checkbox</type>
</CustomField>