unpackaged/main/default/objects/Case/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Storage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>