unpackaged/main/default/objects/Case/fields/Students_Class__c.field-meta.xml
<CustomField>
    <fullName>Students_Class__c</fullName>
    <label>Students Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>