unpackaged/main/default/objects/Case/fields/Students_Department__c.field-meta.xml
<CustomField>
    <fullName>Students_Department__c</fullName>
    <label>Students Department</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>