unpackaged/main/default/objects/Case/fields/Syllabus_Coded__c.field-meta.xml
<CustomField>
    <fullName>Syllabus_Coded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syllabus Coded</label>
    <type>Checkbox</type>
</CustomField>