unpackaged/main/default/objects/Case/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <formula>"ref:_" &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT( $Organization.Id,11), "0", "" )&amp; "._" &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), "0", "") &amp; RIGHT(Id,5) &amp; ":ref"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread ID</label>
    <type>Text</type>
</CustomField>