unpackaged/main/default/objects/Case/fields/Total_Case_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Duration__c</fullName>
    <formula>Case_Duration_Minutes__c +  Storage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Case Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>