unpackaged/main/default/objects/Case/fields/Web_Browser__c.field-meta.xml
<CustomField>
    <fullName>Web_Browser__c</fullName>
    <label>Web Browser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>