unpackaged/main/default/objects/Case/fields/ZenDesk_ID__c.field-meta.xml
<CustomField>
    <fullName>ZenDesk_ID__c</fullName>
    <inlineHelpText>Unique identifier to ZenDesk case #</inlineHelpText>
    <label>ZenDesk ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>